# custom

./: .gitignore
node/src/: service.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs
pallets/xcmdemo/: Cargo.toml
pallets/xcmdemo/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
zombienet/: config1.toml
